--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "daemonite-material": "^4.0.0",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
+    "leaflet": "^1.3.4",
+    "leaflet-omnivore": "^0.3.4",
+    "leaflet.markercluster": "^1.4.1",
     "letteringjs": "^0.7.0",
+    "mapbox-gl": "^0.52.0-beta.1",
+    "mapbox-gl-leaflet": "0.0.3",
     "node-waves": "^0.7.6",
     "npm-run-all": "^4.1.2",
     "pickadate": "^3.5.6",
